--- a/xpointer-js-desc.ja.html
+++ b/xpointer-js-desc.ja.html
@@ -5,7 +5,7 @@
 <link rev="made" href="http://suika.fam.cx/~wakaba/who?" />
 <meta name="author" content="わかば" />
 <link rel="stylesheet" href="/www/style/html/xhtml" media="all" />
-<link rel="stylesheet" href="toc-after-abstract" media="all" />
+<link rel="stylesheet" href="/www/style/ui/toc-after-abstract" media="all" />
 <link rel="stylesheet" href="dom-style" media="all" />
 </head>
 <body>
@@ -223,7 +223,7 @@ lang="en" xml:lang="en">XPointerEvaluator</code></dt>
 					<dd><a href="http://www.w3.org/TR/2003/REC-xptr-framework-20030325/#dt-scheme"><abbr xml:lang="en" lang="en" title="XML Pointer Language">XPointer</abbr> <span lang="en" xml:lang="en">scheme</span></a>
 					の局所名。</dd>
 				<dt><code class="DOMp" xml:lang="en" lang="en">sp</code>
-				(型 <a href="#DOM-XPOINTERSCHEMEPROCESSOR"><code class="DOMi" xml:lang="en" lang="en">XPointerSchemeProcessor</code></a>)</dt>
+				(型 <a href="#DOM-IF-XPOINTERSCHEMEPROCESSOR"><code class="DOMi" xml:lang="en" lang="en">XPointerSchemeProcessor</code></a>)</dt>
 					<dd>設定する 
 					<a href="http://www.w3.org/TR/2003/REC-xptr-framework-20030325/#dt-scheme"><abbr xml:lang="en" lang="en" title="XML Pointer Language">XPointer</abbr> <span lang="en" xml:lang="en">scheme</span></a>
 					処理器。</dd>
@@ -723,7 +723,7 @@ lang="en" xml:lang="en">CVS log for annozilla/src/content/annozilla/xpointer.js<
 	による実装を行っていました。 (現在は <a lang="en" xml:lang="en"
 	href="http://xpointerlib.mozdev.org/">XPointerLib</a>
 	を使用しているようです。)</dd>
-<dt><a href="http://ma.la/mirrorman/wiki.cgi/location.hash#line0"><code class="JS" lang="en" 
+<dt><a href="http://ma.la/mirrorman/wiki.cgi/location.hash"><code class="JS" lang="en" 
 	xml:lang="en">location.hash</code>
 を使ったセッション復元関連。</a></dt>
 	<dd>素片識別子に <span lang="en" xml:lang="en">Web</span> 
@@ -736,12 +736,12 @@ lang="en" xml:lang="en">CVS log for annozilla/src/content/annozilla/xpointer.js<
 <div class="navigation">
 [<a href="/">/</a> <a href="/www/" lang="en" xml:lang="en">Web</a>]
 </div>
-<div class="update" lang="en" xml:lang="en">$Date: 2005/03/13 10:24:13 $</div>
+<div class="update" lang="en" xml:lang="en">$Date: 2005/03/13 10:43:22 $</div>
 </div>
 </body>
 </html>
 
-<!-- Revision: $Date: 2005/03/13 10:24:13 $ -->
+<!-- Revision: $Date: 2005/03/13 10:43:22 $ -->
 
 <!-- ***** BEGIN LICENSE BLOCK *****
    - Copyright 2005 Wakaba <w@suika.fam.cx>.  All rights reserved.
