New style added

--- a/xpointer-js-desc.ja.html
+++ b/xpointer-js-desc.ja.html
@@ -7,6 +7,7 @@
 <link rel="stylesheet" href="/www/style/html/xhtml" media="all" />
 <link rel="stylesheet" href="/www/style/ui/toc-after-abstract" media="all" />
 <link rel="stylesheet" href="dom-style" media="all" />
+<link rel="stylesheet" href="xpointer-style" media="all" />
 </head>
 <body>
 <h1><span xml:lang="en" lang="en">JavaScript</span> 
@@ -736,12 +737,12 @@ lang="en" xml:lang="en">CVS log for annozilla/src/content/annozilla/xpointer.js<
 <div class="navigation">
 [<a href="/">/</a> <a href="/www/" lang="en" xml:lang="en">Web</a>]
 </div>
-<div class="update" lang="en" xml:lang="en">$Date: 2005/03/13 10:43:22 $</div>
+<div class="update" lang="en" xml:lang="en">$Date: 2005/03/14 00:40:15 $</div>
 </div>
 </body>
 </html>
 
-<!-- Revision: $Date: 2005/03/13 10:43:22 $ -->
+<!-- Revision: $Date: 2005/03/14 00:40:15 $ -->
 
 <!-- ***** BEGIN LICENSE BLOCK *****
    - Copyright 2005 Wakaba <w@suika.fam.cx>.  All rights reserved.
