--- a/xpointer-js-desc.ja.html
+++ b/xpointer-js-desc.ja.html
@@ -690,9 +690,11 @@ title="Uniform Resource Identifier">URI</abbr> $BMs$dMzNr$N0\F0$KBP=h$9$k$h$$J}
 <h2 lang="en" xml:lang="en">$B4XO"%U%!%$%k(B</h2>
 
 <p><a href="./">$B$3$N3,AX(B</a>$B$K$"$k%U%!%$%k$,4XO"$9$k<BAu$d;HMQNc$G$9!#(B</p>
-<p>$B3F%U%!%$%k$O(B <a href="http://suika.fam.cx/gate/cvs/www/2005/xpointer-js/"
+<p>$B3F%U%!%$%k$O(B <!--<a href="http://suika.fam.cx/gate/cvs/www/2005/xpointer-js/"
 ><abbr lang="en" xml:lang="en"
-title="Concurrent Versions System">CVS</abbr>
+title="Concurrent Versions System">CVS</abbr>-->
+Git
+(<a href="http://suika.fam.cx/gate/git/wi/web/xpointer-js.git/tree">Suika</a> / <a href="https://github.com/wakaba/xpointer-js">GitHub</a>)
 $B$GHG4IM}$7$F$$$^$9(B</a>$B!#(B</p>
 </div>
 
@@ -712,8 +714,8 @@ title="Concurrent Versions System">CVS</abbr>
 xml:lang="en">xpointer.js</a> <span class="weak">(<a 
 href="http://suika.fam.cx/gate/2005/sw/">SuikaWiki</a>)</span></dt>
 	<dd>$B$40U8+(B, $BIT6q9g>pJsEy$O$3$A$i$^$G$*4j$$$7$^$9!#(B</dd>
-<dt><a href="http://suika.fam.cx/gate/2005/sw/XPointer/API" lang="en"
-xml:lang="en">XPointer//API</a> <span class="weak">(<a 
+<dt><a href="http://suika.fam.cx/gate/2005/sw/XPointer%20API" lang="en"
+xml:lang="en">XPointer API</a> <span class="weak">(<a 
 href="http://suika.fam.cx/gate/2005/sw/">SuikaWiki</a>)</span></dt>
 	<dd><abbr xml:lang="en" lang="en" title="XML Pointer Language">XPointer</abbr> $B$r07$&$?$a$N3&LL$K$D$$$F$NOCBj$r07$C$F$$$^$9!#(B</dd>
 <dt><a href="http://www.mozdev.org/source/browse/annozilla/src/content/annozilla/xpointer.js"
@@ -737,15 +739,15 @@ lang="en" xml:lang="en">CVS log for annozilla/src/content/annozilla/xpointer.js<
 <div class="navigation">
 [<a href="/">/</a> <a href="/www/" lang="en" xml:lang="en">Web</a>]
 </div>
-<div class="update" lang="en" xml:lang="en">$Date: 2005/03/14 00:40:15 $</div>
+<div class="update" lang="en" xml:lang="en">
+  <a href="xpointer-js-desc.ja.html,history"><time>2012-01-14</time></a>
+</div>
 </div>
 </body>
 </html>
 
-<!-- Revision: $Date: 2005/03/14 00:40:15 $ -->
-
 <!-- ***** BEGIN LICENSE BLOCK *****
-   - Copyright 2005 Wakaba <w@suika.fam.cx>.  All rights reserved.
+   - Copyright 2005, 2011 Wakaba <w@suika.fam.cx>.  All rights reserved.
    -
    - This program is free software; you can redistribute it and/or 
    - modify it under the same terms as Perl itself.
