--- a/xpointer-js-desc.ja.html
+++ b/xpointer-js-desc.ja.html
@@ -740,7 +740,7 @@ lang="en" xml:lang="en">CVS log for annozilla/src/content/annozilla/xpointer.js<
 [<a href="/">/</a> <a href="/www/" lang="en" xml:lang="en">Web</a>]
 </div>
 <div class="update" lang="en" xml:lang="en">
-  <a href="xpointer-js-desc.ja.html,history"><time>2012-01-14</time></a>
+  <a href="https://github.com/wakaba/xpointer-js"><time>2012-01-14</time></a>
 </div>
 </div>
 </body>
