--- a/example-stylechange.ja.html
+++ b/example-stylechange.ja.html
@@ -7,7 +7,7 @@
 <link rel="alternate stylesheet" href="example-stylechange-style-blue" title="blue" media="all" />
 <link rel="contents" href="xpointer-js-desc" />
 <link rel="copyright" href="xpointer-js-desc#LICENSE" />
-<link rev="made" href="http://suika.fam.cx/~wakaba/who?" />
+<link rev="made" href="https://suika.suikawiki.org/~wakaba/who?" />
 <meta name="author" content="わかば" />
 </head>
 <body>
@@ -26,7 +26,7 @@
 <!-- Revision: $Date: 2005/03/13 10:24:13 $ -->
 
 <!-- ***** BEGIN LICENSE BLOCK *****
-   - Copyright 2005 Wakaba <w@suika.fam.cx>.  All rights reserved.
+   - Copyright 2005 Wakaba <wakaba@suikawiki.org>.  All rights reserved.
    -
    - This program is free software; you can redistribute it and/or 
    - modify it under the same terms as Perl itself.
@@ -63,7 +63,7 @@
    - the Initial Developer. All Rights Reserved.
    -
    - Contributor(s):
-   -   Wakaba <w@suika.fam.cx>
+   -   Wakaba <wakaba@suikawiki.org>
    -
    - Alternatively, the contents of this file may be used under the terms of
    - either the GNU General Public License Version 2 or later (the "GPL"), or
