--- a/xpointer-js-desc.ja.html
+++ b/xpointer-js-desc.ja.html
@@ -2,7 +2,7 @@
 <head profile="http://suika.fam.cx/~wakaba/-temp/wiki/wiki?WikiHTMLMetaProfile">
 <title>JavaScript (ECMAScript) $B$K$h$k(B XPointer $B$N<BAu(B</title>
 <link rel="copyright" href="#LICENSE" />
-<link rev="made" href="http://suika.fam.cx/~wakaba/who?" />
+<link rev="made" href="https://suika.suikawiki.org/~wakaba/who?" />
 <meta name="author" content="$B$o$+$P(B" />
 <link rel="stylesheet" href="/www/style/html/xhtml" media="all" />
 <link rel="stylesheet" href="/www/style/ui/toc-after-abstract" media="all" />
@@ -75,7 +75,7 @@ xml:lang="en">xpointer.js</code></a> $B$O<!$N3&LL$K$h$j(B
 <div class="note memo">
 <p>$B$3$N3&LL$d$=$N<BAu$O$^$@8!F$Cf$N$b$N$G!"(B
 $B>-MhJQ99$5$l$k2DG=@-$,$"$j$^$9!#I,MW$,$"$l$P(B
-<a href="http://suika.fam.cx/gate/cvs/www/2005/xpointer-js/"
+<a href="https://suika.suikawiki.org/gate/cvs/www/2005/xpointer-js/"
 lang="en" xml:lang="en"><abbr title="Concurrent Versions System">CVS</abbr>
 repository</a> $B$N(B<a href="#FILES">$BG[I[%U%!%$%k(B</a>$B$b;2>H$7$F2<$5$$!#(B</p>
 </div>
@@ -516,7 +516,7 @@ result = XPointerResult.createNodeSnapshotXPointerResult (nodelist);--></pre>
 
 <dl class="xpointer-scheme-definition">
 <dt>$BL>A06u4VL>(B</dt>
-	<dd><code class="uri">&lt;<a href="http://suika.fam.cx/~wakaba/archive/2005/3/style/">http://suika.fam.cx/~wakaba/archive/2005/3/style/</a>&gt;</code></dd>
+	<dd><code class="uri">&lt;<a href="/~wakaba/archive/2005/3/style/">http://suika.fam.cx/~wakaba/archive/2005/3/style/</a>&gt;</code></dd>
 <dt>$B6I=jL>(B</dt>
 	<dd><code>style</code></dd>
 <dt><a href="http://www.w3.org/TR/2003/REC-xptr-framework-20030325/#NT-SchemeData">$B%G!<%?(B</a>$B$N9=J8(B
@@ -548,7 +548,7 @@ result = XPointerResult.createNodeSnapshotXPointerResult (nodelist);--></pre>
 
 <dl class="xpointer-scheme-definition">
 <dt>$BL>A06u4VL>(B</dt>
-	<dd><code class="uri">&lt;<a href="http://suika.fam.cx/~wakaba/archive/2005/3/window/">http://suika.fam.cx/~wakaba/archive/2005/3/window/</a>&gt;</code></dd>
+	<dd><code class="uri">&lt;<a href="/~wakaba/archive/2005/3/window/">http://suika.fam.cx/~wakaba/archive/2005/3/window/</a>&gt;</code></dd>
 <dt>$B6I=jL>(B</dt>
 	<dd><code>title</code></dd>
 <dt><a href="http://www.w3.org/TR/2003/REC-xptr-framework-20030325/#NT-SchemeData">$B%G!<%?(B</a>$B$N9=J8(B
@@ -576,7 +576,7 @@ result = XPointerResult.createNodeSnapshotXPointerResult (nodelist);--></pre>
 
 <dl class="xpointer-scheme-definition">
 <dt>$BL>A06u4VL>(B</dt>
-	<dd><code class="uri">&lt;<a href="http://suika.fam.cx/~wakaba/archive/2005/3/xpointer/">http://suika.fam.cx/~wakaba/archive/2005/3/xpointer/</a>&gt;</code></dd>
+	<dd><code class="uri">&lt;<a href="/~wakaba/archive/2005/3/xpointer/">http://suika.fam.cx/~wakaba/archive/2005/3/xpointer/</a>&gt;</code></dd>
 <dt>$B6I=jL>(B</dt>
 	<dd><code>document</code></dd>
 <dt><a href="http://www.w3.org/TR/2003/REC-xptr-framework-20030325/#NT-SchemeData">$B%G!<%?(B</a>$B$N9=J8(B
@@ -694,7 +694,7 @@ title="Uniform Resource Identifier">URI</abbr> $BMs$dMzNr$N0\F0$KBP=h$9$k$h$$J}
 ><abbr lang="en" xml:lang="en"
 title="Concurrent Versions System">CVS</abbr>-->
 Git
-(<a href="http://suika.fam.cx/gate/git/wi/web/xpointer-js.git/tree">Suika</a> / <a href="https://github.com/wakaba/xpointer-js">GitHub</a>)
+(<a href="https://suika.suikawiki.org/gate/git/wi/web/xpointer-js.git/tree">Suika</a> / <a href="https://github.com/wakaba/xpointer-js">GitHub</a>)
 $B$GHG4IM}$7$F$$$^$9(B</a>$B!#(B</p>
 </div>
 
@@ -710,13 +710,13 @@ Git
 <h2>$B4XO"$9$k;q8;(B</h2>
 
 <dl>
-<dt><a href="http://suika.fam.cx/gate/2005/sw/xpointer.js" lang="en"
+<dt><a href="/gate/2005/sw/xpointer.js" lang="en"
 xml:lang="en">xpointer.js</a> <span class="weak">(<a 
-href="http://suika.fam.cx/gate/2005/sw/">SuikaWiki</a>)</span></dt>
+href="/gate/2005/sw/">SuikaWiki</a>)</span></dt>
 	<dd>$B$40U8+(B, $BIT6q9g>pJsEy$O$3$A$i$^$G$*4j$$$7$^$9!#(B</dd>
-<dt><a href="http://suika.fam.cx/gate/2005/sw/XPointer%20API" lang="en"
+<dt><a href="/gate/2005/sw/XPointer%20API" lang="en"
 xml:lang="en">XPointer API</a> <span class="weak">(<a 
-href="http://suika.fam.cx/gate/2005/sw/">SuikaWiki</a>)</span></dt>
+href="/gate/2005/sw/">SuikaWiki</a>)</span></dt>
 	<dd><abbr xml:lang="en" lang="en" title="XML Pointer Language">XPointer</abbr> $B$r07$&$?$a$N3&LL$K$D$$$F$NOCBj$r07$C$F$$$^$9!#(B</dd>
 <dt><a href="http://www.mozdev.org/source/browse/annozilla/src/content/annozilla/xpointer.js"
 lang="en" xml:lang="en">CVS log for annozilla/src/content/annozilla/xpointer.js</a></dt>
@@ -734,6 +734,8 @@ lang="en" xml:lang="en">CVS log for annozilla/src/content/annozilla/xpointer.js<
 </dl>
 </div><!-- #RELATED -->
 
+<sw-ads normal></sw-ads>
+<script src="https://manakai.github.io/js/global.js" async></script>
 
 <div class="footer">
 <div class="navigation">
@@ -741,13 +743,14 @@ lang="en" xml:lang="en">CVS log for annozilla/src/content/annozilla/xpointer.js<
 </div>
 <div class="update" lang="en" xml:lang="en">
   <a href="https://github.com/wakaba/xpointer-js"><time>2012-01-14</time></a>
+  <sw-ads-notes></sw-ads-notes>
 </div>
 </div>
 </body>
 </html>
 
 <!-- ***** BEGIN LICENSE BLOCK *****
-   - Copyright 2005, 2011 Wakaba <w@suika.fam.cx>.  All rights reserved.
+   - Copyright 2005, 2011 Wakaba <wakaba@suikawiki.org>.  All rights reserved.
    -
    - This program is free software; you can redistribute it and/or 
    - modify it under the same terms as Perl itself.
@@ -784,7 +787,7 @@ lang="en" xml:lang="en">CVS log for annozilla/src/content/annozilla/xpointer.js<
    - the Initial Developer. All Rights Reserved.
    -
    - Contributor(s):
-   -   Wakaba <w@suika.fam.cx>
+   -   Wakaba <wakaba@suikawiki.org>
    -
    - Alternatively, the contents of this file may be used under the terms of
    - either the GNU General Public License Version 2 or later (the "GPL"), or
