--- a/example-stylechange-link.ja.html
+++ b/example-stylechange-link.ja.html
@@ -3,7 +3,7 @@
 <title>スタイル・シート変更の例 (へのリンク)</title>
 <link rel="contents" href="xpointer-js-desc" />
 <link rel="copyright" href="xpointer-js-desc#LICENSE" />
-<link rev="made" href="http://suika.fam.cx/~wakaba/who?" />
+<link rev="made" href="https://suika.suikawiki.org/~wakaba/who?" />
 <meta name="author" content="わかば" />
 <link rel="stylesheet" href="/www/style/html/xhtml" media="all" />
 </head>
@@ -23,7 +23,7 @@
 <!-- Revision: $Date: 2005/03/13 10:24:13 $ -->
 
 <!-- ***** BEGIN LICENSE BLOCK *****
-   - Copyright 2005 Wakaba <w@suika.fam.cx>.  All rights reserved.
+   - Copyright 2005 Wakaba <wakaba@suikawiki.org>.  All rights reserved.
    -
    - This program is free software; you can redistribute it and/or 
    - modify it under the same terms as Perl itself.
@@ -60,7 +60,7 @@
    - the Initial Developer. All Rights Reserved.
    -
    - Contributor(s):
-   -   Wakaba <w@suika.fam.cx>
+   -   Wakaba <wakaba@suikawiki.org>
    -
    - Alternatively, the contents of this file may be used under the terms of
    - either the GNU General Public License Version 2 or later (the "GPL"), or
